###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

module(
    name = "rules_hdl",
    version = "0.0.1"
)

bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "abseil-cpp", version = "20240722.0.bcr.2")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "boost.asio", version = "1.83.0.bcr.1")
bazel_dep(name = "boost.config", version = "1.83.0.bcr.1")
bazel_dep(name = "boost.fusion", version = "1.83.0.bcr.1")
bazel_dep(name = "boost.geometry", version = "1.83.0.bcr.2")
bazel_dep(name = "boost.graph", version = "1.83.0.bcr.2")
bazel_dep(name = "boost.heap", version = "1.83.0")
bazel_dep(name = "boost.icl", version = "1.83.0")
bazel_dep(name = "boost.lambda", version = "1.83.0")
bazel_dep(name = "boost.multi_array", version = "1.83.0")
bazel_dep(name = "boost.phoenix", version = "1.83.0")
bazel_dep(name = "boost.polygon", version = "1.83.0.bcr.2")
bazel_dep(name = "boost.stacktrace", version = "1.83.0")
bazel_dep(name = "boost.serialization", version = "1.83.0")
bazel_dep(name = "boost.property_tree", version = "1.83.0")
bazel_dep(name = "boost.spirit", version = "1.83.0")
bazel_dep(name = "boost.algorithm", version = "1.83.0")
bazel_dep(name = "boost.bind", version = "1.83.0")
bazel_dep(name = "boost.optional", version = "1.83.0")
bazel_dep(name = "boost.thread", version = "1.83.0")

bazel_dep(name = "eigen", version = "4.0.0-20241125.bcr.1")
bazel_dep(name = "fmt", version = "11.1.3")
bazel_dep(name = "googletest", version = "1.15.2")
bazel_dep(name = "protobuf", version = "29.3")
bazel_dep(name = "rules_bison", version = "0.3")
bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "rules_flex", version = "0.3")
bazel_dep(name = "rules_java", version = "8.6.3")
bazel_dep(name = "rules_license", version = "1.0.0")
bazel_dep(name = "rules_m4", version = "0.2.4")
bazel_dep(name = "rules_python", version = "1.0.0")
bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "spdlog", version = "1.15.1")

bazel_dep(name = "zlib", version = "1.3.1.bcr.4")
bazel_dep(name = "or-tools", version = "9.12")
bazel_dep(name = "readline", version = "8.2.bcr.1")
bazel_dep(name = "verilator", version = "5.034")
bazel_dep(name = "lemon", version = "1.3.1")
bazel_dep(name = "iverilog", version = "12.0.0")
bazel_dep(name = "abc", version = "0.0.0-20250408-yosyshq.bcr.1")
bazel_dep(name = "ncurses", version = "6.4.20221231.bcr.8")
bazel_dep(name = "llvm-project", version = "21.0.0")
bazel_dep(name = "tcl", version = "8.6.10")
bazel_dep(name = "openroad", version = "1.0.0")
bazel_dep(name = "swig", version = "4.3.0")
bazel_dep(name = "yosys", version = "0.52.0")
bazel_dep(name = "nextpnr", version = "0.8.0")
bazel_dep(name = "icestorm", version = "0.0.1")
bazel_dep(name = "prjtrellis", version = "1.4.0")

# Custom patches with our fixes. Some of these are transitive deps.
# It's still necessary to override them here.
git_override(
    module_name = "prjtrellis",
    commit = "3332d029295a8e424969126f5c61a5ea111882a8",
    remote = "https://github.com/amorphic-io/prjtrellis.git",
)
git_override(
    module_name = "icestorm",
    commit = "85fd1682b58581b82d1d14f63c089fb033177c21",
    remote = "https://github.com/amorphic-io/icestorm.git",
)
git_override(
    module_name = "nextpnr",
    commit = "2ab1f5e7e6be52e2a59347cace86f5c16348a115",
    remote = "https://github.com/amorphic-io/nextpnr.git",
)
git_override(
    module_name = "cxxopts",
    commit = "0fc4bdab71ea25e3623e2b609b4e5b2bd20bb938",
    remote = "https://github.com/amorphic-io/cxxopts.git",
)
git_override(
    module_name = "yosys",
    commit = "cb3f8fe3e75db0b7c97fbc95b88596a00c611736",
    remote = "https://github.com/amorphic-io/yosys.git",
    init_submodules = True,
)
git_override(
    module_name = "swig",
    commit = "52ed25274e9042611bda40c42e48aae8b6748686",
    remote = "https://github.com/amorphic-io/swig.git",
)
git_override(
    module_name = "iverilog",
    commit = "760dfa28d8f863164a2fbbaabebd1202850249c8",
    remote = "https://github.com/amorphic-io/iverilog.git",
)
git_override(
    module_name = "lemon",
    commit = "f8be7b96fbdfa789a4dae0429967b7724e89d5f5",
    remote = "https://github.com/amorphic-io/lemon",
)
git_override(
    module_name = "abc",
    commit = "2fa8f6e551a85da586fbe01792e6cfdaa7ce72cc",
    remote = "https://github.com/amorphic-io/abc",
)
git_override(
    module_name = "ncurses",
    commit = "f918fafc9f7aeb1745d02e7978597abf8e580de2",
    remote = "https://github.com/amorphic-io/ncurses",
)
git_override(
    module_name = "llvm-project",
    commit = "93c4a9c7b9d2fef50ad97c80efa54ccaed7df0c8",
    remote = "https://github.com/amorphic-io/llvm-project",
)
git_override(
    module_name = "tcl",
    commit = "4ca5c6850eae1a24b611a76a68eff0b31c840823",
    remote = "https://github.com/amorphic-io/tcl.git",
)
git_override(
    module_name = "openroad",
    commit = "c9236a6d6a90410969123575e54ff23dd4f4398e",
    remote = "https://github.com/amorphic-io/OpenROAD",
    init_submodules = True,
)
git_override(
    module_name = "bazel-orfs",
    commit = "126765508161956f8f82ae169084da0235230637",
    remote = "https://github.com/The-OpenROAD-Project/bazel-orfs.git",
)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    ignore_root_user_error = True,
    is_default = False,
    python_version = "3.11",
)
python.toolchain(
    ignore_root_user_error = True,
    is_default = False,
    python_version = "3.13",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "rules_hdl_pip_deps",
    python_version = "3.11",
    requirements_lock = "@rules_hdl//dependency_support:pip_requirements.txt",
)
use_repo(pip, "rules_hdl_pip_deps")

hdl = use_extension(":extensions.bzl", "hdl_ext")
hdl.pdk(
    name = "com_google_skywater_pdk",
    libraries = [
        "sky130_fd_io",
        "sky130_fd_sc_hd",
    ],
)
use_repo(hdl, "com_google_skywater_pdk_sky130_fd_io")
use_repo(hdl, "com_google_skywater_pdk_sky130_fd_sc_hd")

# # Non bzlmodified tooling, importable from dependent modules.
# # hdl_tools = use_extension(":extensions.bzl", "hdl_tools_ext")
# # use_repo(hdl_tools, "at_clifford_yosys", "com_google_skywater_pdk", "org_7zip", "org_theopenroadproject_asap7_pdk_r1p7", "org_theopenroadproject_asap7sc6t_26", "org_theopenroadproject_asap7sc7p5t_27", "org_theopenroadproject_asap7sc7p5t_28")

register_toolchains("//verilator:verilator_toolchain")
